# PhotoShare

./: .env  .gitignore  LICENCE  README.md  README_ENG.md  README_UA.md  README_en.md  docker-compose.yml  example.env  main.py  pyproject.toml  pytest.ini  requirements.txt
Downloads/Project-TEAM_1-main/: .gitignore  README_ENG.md  main.py  pyproject.toml
Downloads/Project-TEAM_1-main/docs/source/: conf.py
Downloads/Project-TEAM_1-main/migrations/: README
Downloads/Project-TEAM_1-main/migrations/versions/: 084331cdddbf_change_rating.py  49fb17c3b7da_change_error5.py  4fd4b5889014_change_error4.py  755965a26437_add_file_path_transform.py  968461e5172c_change_friend.py  b345c3211f7e_change_photo1.py  e3986e4a47a2_change_photo2.py  e3daddfc199c_change_error2.py  f77596752c6f_photo_the_description_field_cam_be_none.py
Downloads/Project-TEAM_1-main/src/conf/: config.py  messages.py
Downloads/Project-TEAM_1-main/src/database/: db.py
Downloads/Project-TEAM_1-main/tests/: test_unit_repository_contacts.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
migrations/: README  env.py
migrations/versions/: 015f9274864f_photo_tag_change_6.py  042bc1ac7b4f_photo_tag_change_5.py  12f6d5adbbf3_change_user_photos_to_user_photos.py  1668f37e89ce_photo_tag_change_3.py  2126164ec42b_change_comment1.py  281302d1939a_change_tags1.py  3b893f328b39_change_tags4.py  4285bd8cbb6b_change_comment.py  43c29fe58b40_change_error6.py  53b86358f8ed_change_error4.py  6064448860db_change_tags3.py  617447f5b0ae_change_photo.py  617af42f65bd_change_error3.py  7ff12911275b_change_new.py  80499043449b_change_error8.py  a1f95bf53252_change_tags.py  a6d9bdcdd015_photo_tag_change_2.py  aa926849d860_change_error7.py  ab7c64b6b256_add_ban_user_table.py  b6cc80942831_photo_tag_change_4.py  ba47be2c6ebf_change_tags5.py  cdac52e9d887_change_error7.py  cfde8bb07cb5_change_models_photo_tag.py  e1d7311a4350_init.py  efe84423d44e_change_error.py  fefd517a9da1_change_error1.py
src/conf/: config.py  massages.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: .gitignore  admin.py  comments.py  photos.py  qr_code.py  rating.py  tags.py  transformation.py  users.py
src/routes/: admin.py  auth.py  comments.py  photos.py  rating.py  tags.py  transformation.py  users.py
src/schemas/: comments.py  photo.py  qr_code.py  rating.py  tag.py  transformation.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: message.html  reset_password.html  reset_random_password.html
src/utils/: py_logger.py
static/client/: signIn.html
static/client/js/: reset_password.js  signin.js
static/client/templates/: reset_password.html
static/css/: cover.css  reset_password.css  style.css
static/js/: script.js
templates/: auth.html  index.html  signup.html  upload.html
tests/: conftest.py  pytest_db.py  test.db  test_e2e_admin.py  test_e2e_auth.py  test_pytest_routers_birthday.py
(+6 files in other folders)
