[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = ""
authors = ["Team_1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosmtplib = "2.0.2"
alabaster = "0.7.16"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
babel = "2.14.0"
black = "24.3.0"
blinker = "1.7.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudinary = "1.39.1"
cryptography = "42.0.5"
dnspython = "2.6.1"
docutils = "0.21.1"
ecdsa = "0.19.0"
email-validator = "2.1.1"
fastapi = "0.110.1"
fastapi-limiter = "0.1.6"
fastapi-mail = "1.4.1"
greenlet = "3.0.3"
h11 = "0.14.0"
idna = "3.6"
imagesize = "1.4.1"
iniconfig = "2.0.0"
jinja2 = "3.1.3"
libgravatar = "1.0.4"
mako = "1.3.2"
markupsafe = "2.1.5"
mypy-extensions = "1.0.0"
packaging = "24.0"
passlib = "1.7.4"
pathspec = "0.12.1"
platformdirs = "4.2.0"
pluggy = "1.5.0"
pyasn1 = "0.6.0"
pycparser = "2.22"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
pydantic-core = "2.16.3"
pygments = "2.17.2"
pytest = "8.1.1"
pytest-asyncio = "0.23.6"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.9"
redis = "5.1.0b4"
requests = "2.31.0"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.1"
snowballstemmer = "2.2.0"
sphinx = "7.3.5"
sphinxcontrib-applehelp = "1.0.8"
sphinxcontrib-devhelp = "1.0.6"
sphinxcontrib-htmlhelp = "2.0.5"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.7"
sphinxcontrib-serializinghtml = "1.1.10"
sqlalchemy = "2.0.29"
starlette = "0.37.2"
typing-extensions = "4.10.0"
urllib3 = "2.2.1"
uvicorn = "0.29.0"
bcrypt = "^4.1.2"
django-qrcode = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
